feat: ownership fix
